modify: came up with an alternative visualization

--- a/da/similarity-experimental.ipynb
+++ b/da/similarity-experimental.ipynb
@@ -443,6 +443,124 @@
     "\n",
     "기본적으로는 한번에 최대한 많이, 그리고 균일하게 걸러낼 수 있는 속성이 좋을 것입니다.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hobby\n",
+       "교육    64\n",
+       "놀이    65\n",
+       "운동    66\n",
+       "음악    64\n",
+       "자연    65\n",
+       "패션    66\n",
+       "Name: id, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.groupby('hobby').count()['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "personality\n",
+       "느끼함      34\n",
+       "단순 활발    24\n",
+       "먹보       60\n",
+       "무뚝뚝      55\n",
+       "성숙함      55\n",
+       "아이돌      49\n",
+       "운동광      55\n",
+       "친절함      58\n",
+       "Name: id, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.groupby('personality').count()['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "birthday\n",
+       "01-01    1\n",
+       "01-02    1\n",
+       "01-03    1\n",
+       "01-04    1\n",
+       "01-05    1\n",
+       "        ..\n",
+       "12-27    1\n",
+       "12-28    1\n",
+       "12-29    2\n",
+       "12-30    1\n",
+       "12-31    1\n",
+       "Name: id, Length: 361, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.groupby('birthday').count()['id']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "필터를 두 번만 하면 100명이 아니라 10명도 안 남을 것 같습니다.\n",
+    "\n",
+    "윤년이 생일인 녀석(몽셰르)이 있으니 1년은 366일인데 위에선 361개밖에 없는 걸 보니 빠진 일이 5개가 있는 모양입니다. 그래도 상관 없습니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 대안\n",
+    "\n",
+    "앞의 방법은 속성 중 2가지에 대한 평가가 완전히 옳다고 치고 걸러내는 것입니다.\n",
+    "\n",
+    "하지만 속성 한번에 대략 1/7이 걸러지므로 두 번을 하고 나면 평균적으로 비교할 캐릭터는 10명 남짓밖에 남지 않을 것입니다. 아마 상당히 심심한 그래프가 될 겁니다.\n",
+    "\n",
+    "대안은 5차원을 전부 사용하고 대신 3차원 스캐터 그래프에 `hue`, `size` 값에 변화를 주어 차원 2개를 어거지로 만들어 내는 것입니다.\n",
+    "\n",
+    "단점:\n",
+    "  - 사람에게 보이는 가까운 거리와 계산 결과 가까운 거리가 다를 수 있습니다.\n",
+    "  - 따라서 보여주니까 뭔가 멋지긴 하지만 사실상 그래프로 유의미한 해석을 하는 것은 힘들 것입니다.\n",
+    "\n",
+    "따라서, 만약 저렇게 한다면 `hue`와 `size`로 나타내는 속성은 좀 덜 중요한 것을 넣고 비중을 조절한다든지 해야 할 것입니다.\n",
+    "\n",
+    "또한, 만약 위의 방법으로 할 것에 대비해 5속성 모두에 대해 유사성을 평가하는 논리를 결정해 두어야 합니다.\n"
+   ]
   }
  ],
  "metadata": {
