modify: define similarity criteria

--- a/da/similarity-experimental.ipynb
+++ b/da/similarity-experimental.ipynb
@@ -23,11 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ast\n",
+    "import calendar\n",
+    "import datetime\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd"
@@ -560,6 +562,93 @@
     "따라서, 만약 저렇게 한다면 `hue`와 `size`로 나타내는 속성은 좀 덜 중요한 것을 넣고 비중을 조절한다든지 해야 할 것입니다.\n",
     "\n",
     "또한, 만약 위의 방법으로 할 것에 대비해 5속성 모두에 대해 유사성을 평가하는 논리를 결정해 두어야 합니다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 평가 방법\n",
+    "\n",
+    "모든 방법은 자바스크립트와 파이썬 모두에서 구현 가능해야 합니다.\n",
+    "\n",
+    "### `birthday`\n",
+    "\n",
+    "일 수로 바꾸어 날짜 차이를 계산합니다.\n",
+    "주의사항은 생일이 2월 29일인 녀석이 있습니다.\n",
+    "\n",
+    "```\n",
+    "diff = abs(yday2 - yday1) % 183\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diff_dob(yday1, yday2):\n",
+    "  diff = yday1 - yday2\n",
+    "  if abs(diff) < 182.5:\n",
+    "    return abs(diff)\n",
+    "  else:\n",
+    "    return int(diff % 182.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert diff_dob(1, 365) == 1\n",
+    "assert diff_dob(1, 364) == 2\n",
+    "assert diff_dob(31, 59) == 28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calendar.isleap(datetime.date.today().year)\n",
+    "\n",
+    "# today = datetime.date.today()\n",
+    "# today.timetuple().tm_yday\n",
+    "\n",
+    "day = datetime.date(2022, 1, 1)\n",
+    "day.timetuple().tm_yday"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `hobby`, `personality`\n",
+    "\n",
+    "단순하게 같으면 0, 다르면 1입니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `colors`, `styles`\n",
+    "\n",
+    "두 캐릭터의 교집합을 구해서 길이를 보고 2면 1, 1이면 0.5, 0이면 0입니다."
    ]
   }
  ],
