modify: define conversion functions

--- a/da/similarity-experimental.ipynb
+++ b/da/similarity-experimental.ipynb
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,18 +593,29 @@
     "  if abs(diff) < 182.5:\n",
     "    return abs(diff)\n",
     "  else:\n",
-    "    return int(diff % 182.5)"
+    "    return 182.5*2 - abs(diff)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
+    "print(diff_dob(1, 365))\n",
+    "\n",
     "assert diff_dob(1, 365) == 1\n",
-    "assert diff_dob(1, 364) == 2\n",
-    "assert diff_dob(31, 59) == 28"
+    "assert diff_dob(364, 1) == 2\n",
+    "assert diff_dob(31, 59) == 28\n",
+    "assert diff_dob(59, 31) == 28"
    ]
   },
   {
@@ -649,6 +660,344 @@
     "### `colors`, `styles`\n",
     "\n",
     "두 캐릭터의 교집합을 구해서 길이를 보고 2면 1, 1이면 0.5, 0이면 0입니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 일섭에게 적용해보기\n",
+    "\n",
+    "일섭을 기준으로 다른 모든 캐릭터와의 비교를 마치면 최종 유사도 테이블의 한 행이 완성됩니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name_en</th>\n",
+       "      <th>name_ko</th>\n",
+       "      <th>image_icon</th>\n",
+       "      <th>species</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>birthday</th>\n",
+       "      <th>birthday_month</th>\n",
+       "      <th>birthday_day</th>\n",
+       "      <th>personality</th>\n",
+       "      <th>hobby</th>\n",
+       "      <th>styles</th>\n",
+       "      <th>colors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>admiral</td>\n",
+       "      <td>Admiral</td>\n",
+       "      <td>일섭</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/brd06.png</td>\n",
+       "      <td>Bird</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>01-27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>무뚝뚝</td>\n",
+       "      <td>자연</td>\n",
+       "      <td>[쿨]</td>\n",
+       "      <td>[검정색, 파랑색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>agents</td>\n",
+       "      <td>Agent S</td>\n",
+       "      <td>2호</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/squ05.png</td>\n",
+       "      <td>Squirrel</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>07-02</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>아이돌</td>\n",
+       "      <td>운동</td>\n",
+       "      <td>[심플, 액티브]</td>\n",
+       "      <td>[검정색, 파랑색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>agnes</td>\n",
+       "      <td>Agnes</td>\n",
+       "      <td>아그네스</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/pig17.png</td>\n",
+       "      <td>Pig</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>04-21</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21</td>\n",
+       "      <td>단순 활발</td>\n",
+       "      <td>놀이</td>\n",
+       "      <td>[심플, 엘레강스]</td>\n",
+       "      <td>[하양색, 핑크색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>al</td>\n",
+       "      <td>Al</td>\n",
+       "      <td>우락</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/gor08.png</td>\n",
+       "      <td>Gorilla</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>10-18</td>\n",
+       "      <td>10</td>\n",
+       "      <td>18</td>\n",
+       "      <td>먹보</td>\n",
+       "      <td>운동</td>\n",
+       "      <td>[액티브]</td>\n",
+       "      <td>[하양색, 빨강색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>alfonso</td>\n",
+       "      <td>Alfonso</td>\n",
+       "      <td>알베르트</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/crd00.png</td>\n",
+       "      <td>Alligator</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>06-09</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>먹보</td>\n",
+       "      <td>놀이</td>\n",
+       "      <td>[심플]</td>\n",
+       "      <td>[빨강색, 파랑색]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id  name_en name_ko                                    image_icon  \\\n",
+       "0  admiral  Admiral      일섭  https://acnhcdn.com/latest/NpcIcon/brd06.png   \n",
+       "1   agents  Agent S      2호  https://acnhcdn.com/latest/NpcIcon/squ05.png   \n",
+       "2    agnes    Agnes    아그네스  https://acnhcdn.com/latest/NpcIcon/pig17.png   \n",
+       "3       al       Al      우락  https://acnhcdn.com/latest/NpcIcon/gor08.png   \n",
+       "4  alfonso  Alfonso    알베르트  https://acnhcdn.com/latest/NpcIcon/crd00.png   \n",
+       "\n",
+       "     species  gender birthday  birthday_month  birthday_day personality hobby  \\\n",
+       "0       Bird    Male    01-27               1            27         무뚝뚝    자연   \n",
+       "1   Squirrel  Female    07-02               7             2         아이돌    운동   \n",
+       "2        Pig  Female    04-21               4            21       단순 활발    놀이   \n",
+       "3    Gorilla    Male    10-18              10            18          먹보    운동   \n",
+       "4  Alligator    Male    06-09               6             9          먹보    놀이   \n",
+       "\n",
+       "       styles      colors  \n",
+       "0         [쿨]  [검정색, 파랑색]  \n",
+       "1   [심플, 액티브]  [검정색, 파랑색]  \n",
+       "2  [심플, 엘레강스]  [하양색, 핑크색]  \n",
+       "3       [액티브]  [하양색, 빨강색]  \n",
+       "4        [심플]  [빨강색, 파랑색]  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`species`, `gender`, `birthday_x` 열은 버려도 될 것 같습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 391 entries, 0 to 390\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   id              390 non-null    object\n",
+      " 1   name_en         391 non-null    object\n",
+      " 2   name_ko         391 non-null    object\n",
+      " 3   image_icon      391 non-null    object\n",
+      " 4   birthday        391 non-null    object\n",
+      " 5   birthday_month  391 non-null    int64 \n",
+      " 6   birthday_day    391 non-null    int64 \n",
+      " 7   personality     391 non-null    object\n",
+      " 8   hobby           391 non-null    object\n",
+      " 9   styles          391 non-null    object\n",
+      " 10  colors          391 non-null    object\n",
+      "dtypes: int64(2), object(9)\n",
+      "memory usage: 33.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "chars = chars.drop(columns=['species', 'gender'])\n",
+    "chars.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>id</th>\n",
+       "      <th>admiral</th>\n",
+       "      <th>agents</th>\n",
+       "      <th>agnes</th>\n",
+       "      <th>al</th>\n",
+       "      <th>alfonso</th>\n",
+       "      <th>alice</th>\n",
+       "      <th>alli</th>\n",
+       "      <th>amelia</th>\n",
+       "      <th>anabelle</th>\n",
+       "      <th>anchovy</th>\n",
+       "      <th>...</th>\n",
+       "      <th>wartjr</th>\n",
+       "      <th>weber</th>\n",
+       "      <th>wendy</th>\n",
+       "      <th>whitney</th>\n",
+       "      <th>willow</th>\n",
+       "      <th>winnie</th>\n",
+       "      <th>wolfgang</th>\n",
+       "      <th>yuka</th>\n",
+       "      <th>zell</th>\n",
+       "      <th>zucker</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 391 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [admiral, agents, agnes, al, alfonso, alice, alli, amelia, anabelle, anchovy, angus, anicotti, ankha, annalisa, annalise, antonio, apollo, apple, astrid, audie, aurora, ava, avery, axel, baabara, bam, bangle, barold, bea, beardo, beau, becky, bella, benedict, benjamin, bertha, bettina, bianca, biff, bigtop, bill, billy, biskit, bitty, blaire, blanche, bluebear, bob, bonbon, bones, boomer, boone, boots, boris, boyd, bree, broccolo, broffina, bruce, bubbles, buck, bud, bunnie, butch, buzz, cally, camofrog, canberra, candi, carmen, caroline, carrie, cashmere, celia, cesar, chadder, charlise, cheri, cherry, chester, chevre, chief, chops, chow, chrissy, claude, claudia, clay, cleo, clyde, coach, cobb, coco, cole, colton, cookie, cousteau, cranston, croque, cube, ...]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 391 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectors = pd.DataFrame(columns=chars['id'])\n",
+    "vectors.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id                                                     admiral\n",
+      "name_en                                                Admiral\n",
+      "name_ko                                                     일섭\n",
+      "image_icon        https://acnhcdn.com/latest/NpcIcon/brd06.png\n",
+      "birthday                                                 01-27\n",
+      "birthday_month                                               1\n",
+      "birthday_day                                                27\n",
+      "personality                                                무뚝뚝\n",
+      "hobby                                                       자연\n",
+      "styles                                                     [쿨]\n",
+      "colors                                              [검정색, 파랑색]\n",
+      "Name: 0, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "ref = chars.iloc[0]\n",
+    "print(ref)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for row in chars.itertuples(index=False, name='char'):\n",
+    "  # print(row['id'])\n",
+    "\n",
+    "TODAY_LEAP = calendar.isleap(datetime.date.today().year)\n",
+    "DAY_MOD = 183.0 if TODAY_LEAP else 182.5\n",
+    "\n",
+    "def compare_simple(a, b):\n",
+    "  return 1.0 if a == b else 0.0\n",
+    "\n",
+    "def compare_set(a, b):\n",
+    "  i = set(a) & set(b)\n",
+    "  return len(i) / 2.0\n",
+    "\n",
+    "def compare_yday(a, b):\n",
+    "  delta = abs(a - b)\n",
+    "  if delta < DAY_MOD:\n",
+    "    return abs(delta)\n",
+    "  else:\n",
+    "    return DAY_MOD*2 - delta"
    ]
   }
  ],
