fix: compare function scale

--- a/da/similarity-experimental.ipynb
+++ b/da/similarity-experimental.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -896,51 +896,36 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
        "      <th>id</th>\n",
-       "      <th>admiral</th>\n",
-       "      <th>agents</th>\n",
-       "      <th>agnes</th>\n",
-       "      <th>al</th>\n",
-       "      <th>alfonso</th>\n",
-       "      <th>alice</th>\n",
-       "      <th>alli</th>\n",
-       "      <th>amelia</th>\n",
-       "      <th>anabelle</th>\n",
-       "      <th>anchovy</th>\n",
-       "      <th>...</th>\n",
-       "      <th>wartjr</th>\n",
-       "      <th>weber</th>\n",
-       "      <th>wendy</th>\n",
-       "      <th>whitney</th>\n",
-       "      <th>willow</th>\n",
-       "      <th>winnie</th>\n",
-       "      <th>wolfgang</th>\n",
-       "      <th>yuka</th>\n",
-       "      <th>zell</th>\n",
-       "      <th>zucker</th>\n",
+       "      <th>birthday</th>\n",
+       "      <th>hobby</th>\n",
+       "      <th>personality</th>\n",
+       "      <th>styles</th>\n",
+       "      <th>colors</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 391 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [admiral, agents, agnes, al, alfonso, alice, alli, amelia, anabelle, anchovy, angus, anicotti, ankha, annalisa, annalise, antonio, apollo, apple, astrid, audie, aurora, ava, avery, axel, baabara, bam, bangle, barold, bea, beardo, beau, becky, bella, benedict, benjamin, bertha, bettina, bianca, biff, bigtop, bill, billy, biskit, bitty, blaire, blanche, bluebear, bob, bonbon, bones, boomer, boone, boots, boris, boyd, bree, broccolo, broffina, bruce, bubbles, buck, bud, bunnie, butch, buzz, cally, camofrog, canberra, candi, carmen, caroline, carrie, cashmere, celia, cesar, chadder, charlise, cheri, cherry, chester, chevre, chief, chops, chow, chrissy, claude, claudia, clay, cleo, clyde, coach, cobb, coco, cole, colton, cookie, cousteau, cranston, croque, cube, ...]\n",
-       "Index: []\n",
-       "\n",
-       "[0 rows x 391 columns]"
+       "Columns: [id, birthday, hobby, personality, styles, colors]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vectors = pd.DataFrame(columns=chars['id'])\n",
+    "# sims = pd.DataFrame(columns=chars['id'])\n",
+    "vectors = pd.DataFrame(\n",
+    "  columns=['id', 'birthday', 'hobby', 'personality', 'styles', 'colors']\n",
+    ")\n",
     "vectors.head()"
    ]
   },
@@ -975,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,18 +971,19 @@
     "DAY_MOD = 183.0 if TODAY_LEAP else 182.5\n",
     "\n",
     "def compare_simple(a, b):\n",
-    "  return 1.0 if a == b else 0.0\n",
+    "  return 0.0 if a == b else 1.0\n",
     "\n",
     "def compare_set(a, b):\n",
     "  i = set(a) & set(b)\n",
-    "  return len(i) / 2.0\n",
+    "  return 1.0 - len(i)/2.0\n",
     "\n",
     "def compare_yday(a, b):\n",
     "  delta = abs(a - b)\n",
     "  if delta < DAY_MOD:\n",
-    "    return abs(delta)\n",
+    "    result = abs(delta)\n",
     "  else:\n",
-    "    return DAY_MOD*2 - delta"
+    "    result = DAY_MOD*2 - delta\n",
+    "  return result / DAY_MOD / 2"
    ]
   }
  ],
