modify: add yday convert function

--- a/da/similarity-experimental.ipynb
+++ b/da/similarity-experimental.ipynb
@@ -966,8 +966,8 @@
    "source": [
     "# for row in chars.itertuples(index=False, name='char'):\n",
     "  # print(row['id'])\n",
-    "\n",
-    "TODAY_LEAP = calendar.isleap(datetime.date.today().year)\n",
+    "TODAY_YEAR = datetime.date.today().year\n",
+    "TODAY_LEAP = calendar.isleap(TODAY_YEAR)\n",
     "DAY_MOD = 183.0 if TODAY_LEAP else 182.5\n",
     "\n",
     "def compare_simple(a, b):\n",
@@ -977,13 +977,16 @@
     "  i = set(a) & set(b)\n",
     "  return 1.0 - len(i)/2.0\n",
     "\n",
-    "def compare_yday(a, b):\n",
+    "def compare_yday(a: int, b: int):\n",
     "  delta = abs(a - b)\n",
     "  if delta < DAY_MOD:\n",
     "    result = abs(delta)\n",
     "  else:\n",
     "    result = DAY_MOD*2 - delta\n",
-    "  return result / DAY_MOD / 2"
+    "  return result / DAY_MOD / 2\n",
+    "\n",
+    "def to_yday(m: int, d: int) -> int:\n",
+    "  datetime.date(TODAY_YEAR, m, d).timetuple().tm_yday"
    ]
   }
  ],
