modify: try partial approach

--- a/da/similarity-experimental.ipynb
+++ b/da/similarity-experimental.ipynb
@@ -23,13 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ast\n",
     "import calendar\n",
     "import datetime\n",
+    "from functools import partial\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd"
@@ -931,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -942,6 +943,8 @@
       "name_en                                                Admiral\n",
       "name_ko                                                     일섭\n",
       "image_icon        https://acnhcdn.com/latest/NpcIcon/brd06.png\n",
+      "species                                                   Bird\n",
+      "gender                                                    Male\n",
       "birthday                                                 01-27\n",
       "birthday_month                                               1\n",
       "birthday_day                                                27\n",
@@ -954,13 +957,13 @@
     }
    ],
    "source": [
-    "ref = chars.iloc[0]\n",
-    "print(ref)"
+    "REF = chars.iloc[0]\n",
+    "print(REF)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +980,12 @@
     "  i = set(a) & set(b)\n",
     "  return 1.0 - len(i)/2.0\n",
     "\n",
-    "def compare_yday(a: int, b: int):\n",
+    "def to_yday(m: int, d: int) -> int:\n",
+    "  datetime.date(TODAY_YEAR, m, d).timetuple().tm_yday\n",
+    "  \n",
+    "def compare_yday(a: tuple, b: tuple):\n",
+    "  a = to_yday(*a)\n",
+    "  b = to_yday(*b)\n",
     "  delta = abs(a - b)\n",
     "  if delta < DAY_MOD:\n",
     "    result = abs(delta)\n",
@@ -985,8 +993,104 @@
     "    result = DAY_MOD*2 - delta\n",
     "  return result / DAY_MOD / 2\n",
     "\n",
-    "def to_yday(m: int, d: int) -> int:\n",
-    "  datetime.date(TODAY_YEAR, m, d).timetuple().tm_yday"
+    "compare_hobby = partial(compare_simple, REF.hobby)\n",
+    "compare_personality = partial(compare_simple, REF.personality)\n",
+    "compare_colors = partial(compare_set, REF.colors)\n",
+    "compare_styles = partial(compare_set, REF.styles)\n",
+    "compare_birthday = partial(compare_yday, (REF.birthday_month, REF.birthday_day))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이제 한번 돌려봅니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "하지만 그전에 df 연습;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a  b   c\n",
+       "0  1  4   7\n",
+       "1  2  5   8\n",
+       "2  3  6   9\n",
+       "3  4  7  10"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'a': [1, 2, 3], 'b': [4, 5, 6], 'c': [7, 8, 9]})\n",
+    "df.loc[len(df)] = [4, 7, 10]\n",
+    "df"
    ]
   }
  ],
