modify: delete custom

--- a/da/statsChart.ipynb
+++ b/da/statsChart.ipynb
@@ -1775,10 +1775,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>personality</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>personality_counts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>느끼함</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>단순 활발</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>먹보</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>무뚝뚝</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>성숙함</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>아이돌</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>운동광</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>친절함</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  personality  gender  personality_counts\n",
+       "0         느끼함    Male                  34\n",
+       "1       단순 활발  Female                  24\n",
+       "2          먹보    Male                  60\n",
+       "3         무뚝뚝    Male                  55\n",
+       "4         성숙함  Female                  55\n",
+       "5         아이돌  Female                  49\n",
+       "6         운동광    Male                  55\n",
+       "7         친절함  Female                  59"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "personality = characters.groupby(['personality', 'gender']).size().reset_index(name='personality_counts')\n",
+    "personality\n",
+    "# personality_female = \n",
+    "# personality_male = "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Bar 클래스 생성, name 인자로 범례 생성\n",
+    "data1 = go.Bar(x=personality['personality'], y=personality_male, name='Male', marker={'color':\"rgba(133,244,255,0.7)\"})\n",
+    "data2 = go.Bar(x=personality['personality'], y=personality_female, name='Female', marker={'color':\"rgba(66,194,255,0.7)\"})\n",
+    "layout = go.Layout(title='personality', barmode='stack') # Title 설정 & Stack으로 그리기\n",
+    " \n",
+    "# 생성된 Bar 클래스를 리스트로 만들어 data 인자로 설정\n",
+    "fig = go.Figure(data=[data1, data2], layout=layout)\n",
+    "fig.show()\n",
+    "\n",
+    "plotly.offline.plot(fig, filename=\"hobby_stacked_chart.html\")"
+   ]
   }
  ],
  "metadata": {
